<resources>
    <string name="top_name_1">嗅觉识别功能测试</string>
    <string name="app_wel_skip">跳过</string>
    <string name="test_finish_return">返回测试选择界面</string>
    <string name="toast_app_quit_ifo">再按一次退出程序</string>
    <string name="law_version_remind">DOTS -1.0.0.0 @2020–2023 All Right Reserved</string>
    <string name="simulation_test_id">模拟识别测试</string>
    <string name="simulation_test">模拟测试</string>
    <string name="real_test">识别测试</string>
    <string name="Back_management">后台管理</string>
    <string name="instruction1">1.使用前，请确保仪器供电正常，待仪器初始化完成后，启动移动设备上的嗅觉检测应用程序，应用程序将自动连接至仪器；您必须确保移动设备成功连接至嗅觉测试仪器，若连接正常，应用程序右上角的WiFi提示符将变为绿色。若连接失败，其显示为红色。此时请通过管理页面，手动尝试连接。</string>
    <string name="instruction2">2.选择合适的测试类型，开始测试前，请按照系统的提示，输入您的个人信息。</string>
    <string name="instruction3">3.测试完成后，点击“上传测试结果”按钮后结束本次，您可以返回主界面或退出本应用程序</string>
    <string name="viewinstruction1">1.欢迎使用本款嗅觉功能测试仪器！在测试过程中，您需要按照指引，嗅闻并辨识一系列常见的气味。气味将通过嗅闻头呈现，您需要在离嗅闻头3–5cm处正常地呼吸、嗅闻；建议您采用短呼吸、短嗅的方式。</string>
    <string name="viewinstruction2">2.请您按照管理员的指示选择合适的测试</string>
    <string name="viewinstruction3">3.请您输入您的个人信息，确认无误后，请点击下一步</string>
    <string name="viewinstruction4">4.点击"准备"或"下一个气味"按钮，开启3秒倒计时，倒计时结束后，您将有3秒的时间对气味进行嗅闻和识别</string>
    <string name="viewinstruction5">5.第一次嗅闻后，将弹出确认弹窗，若您未察觉到有任何气味，您可以选择否，重新准备再次嗅闻！可重新嗅闻的次数可由管理员于管理界面设定。</string>
    <string name="viewinstruction6">6.嗅闻完成后，进入四项选择，作答界面，您必须根据您所闻到的气味，双击选择最相似的气味图片，如果您不确定您必须猜一个</string>
    <string name="viewinstruction100">3.开始答题前，您将有有3s的时间嗅闻气味,然后将弹出提示框，询问您是否有闻到气味;然后你可以根据识别的气味选择你认为正确的图片</string>
    <string name="remind">温馨提示</string>
    <string name="remind2">请前往后台管理页面查看详细信息</string>
    <string name="remind3">好的</string>
    <string name="remind4">警告！！！</string>
    <string name="remind5">执行此操作，将会删除数据库中的内容，不可恢复。</string>
    <string name="remind6">确认删除</string>
    <string name="cencle1">取消</string>
    <string name="confirm1">确认</string>
    <string name="retry1">可重闻次数设置</string>
    <string name="test_mode">测试模式设置</string>
    <string name="need_useful_wifi">请将WIFI切换至可使用的网络，断开与仪器的wifi局域网连接，才能在线提交反馈信息。</string>
    <string name="btn_export_all_data">一键导出</string>
    <string name="btn_delete_all_data">一键删除</string>
    <string name="ifo_no_result">无结果</string>
    <string name="save_excel_folder">请选择Excel数据表导出目录</string>
    <string name="toast_export_filename_ifo">识别测试结果.xls</string>
    <string name="toast_export_ifo">已导出到指定目录</string>
    <string name="toast_export_cancle_ifo">已取消数据导出</string>
    <string name="toast_delete_data_ifo">已成功删除数据</string>
    <string name="toast_export_data_permiss">已授予权限</string>
    <string name="toast_export_data_unpermiss">未授予权限，无法导出</string>
    <string name="delete_all_data">执行此操作，将会删除数据库中的所有内容，不可恢复，确认删除前请确保已将数据导出。</string>
    <string name="release_time_set">本参数将更改气味释放的时间。非专业人员严禁更改此项参数，将直接影响气味刺激时长，影响测试结果。</string>
    <string name="release_delay_set">本参数将更改气味释放的提前时间。非专业人员严禁更改此项参数，将直接影响气味刺激开始时间，影响测试结果。</string>
    <string name="usage_feedback">用户反馈</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="feedback_rmd">欢迎您提出宝贵的改进意见，您的建议和意见是我们改进的动力！</string>
    <string name="feedback_rmd_2">请输入您的反馈意见（反馈邮件正文 字数500以内）</string>
    <string name="option_1">选项1</string>
    <string name="option_2">选项2</string>
    <string name="option_3">选项3</string>
    <string name="option_4">选项4</string>
    <string name="answer">回答</string>
    <string name="correct_answer">答案</string>
    <string name="id">ID号 :</string>
    <string name="name">姓名 :</string>
    <string name="age">年龄 :</string>
    <string name="gender">性别  :</string>
    <string name="info_input_page">个人信息录入</string>
    <string name="info_incomplete_remind">请输入完整的个人信息</string>
    <string name="test_result">识别测试结果.xls</string>
    <string name="back_ifo">后台管理</string>
    <string name="re_connect">通信重连</string>
    <string name="re_connect_btn">连接</string>
    <string name="connect_success_remind">已连接到仪器</string>
    <string name="connect_error_ip_remind">该IP地址不存在，请检查</string>
    <string name="connect_error_remind_2">连接异常或被拒绝，请检查</string>
    <string name="connect_error_remind_send">连接出错,数据发送失败，请重试</string>
    <string name="connect_error_reconnect">连接断开，正在重连</string>
    <string name="quit_reconnect_btn">返回</string>
    <string name="general_control_interface">总控界面</string>
    <string name="management_result">识别测试结果管理</string>
    <string name="management_retry_count">识别测试-重闻次数设置</string>
    <string name="management_retry_count_remind">当前设置的重闻次数：</string>
    <string name="management_advance_timing">识别测试-提前时间设置</string>
    <string name="management_advance_timing_remind">当前的提前打开时间：</string>
    <string name="management_advance_timing_input_remind">请输入提前打开时间，请输入整数秒，单位/s</string>
    <string name="management_advance_timing_max_remind">提前打开时间应小于3s</string>
    <string name="management_test_mode">识别测试模式设置</string>
    <string name="management_test_mode_remind">当前设置的测试模式：</string>
    <string name="management_fix_mode">固定模式</string>
    <string name="management_release_timing">识别测试-释放时间设置</string>
    <string name="management_release_timing_ifo">请输入气味释放时长，单位/s</string>
    <string name="management_release_timing_max_remind">释放时间不可超出10s</string>
    <string name="management_release_timing_remind">当前设置的释放时间：</string>
    <string name="testing_ifo">点击屏幕中间的 ”准备“ 或 ”下一个气味“ 按钮开始测试，在3s倒计时结束后，“闻”字提示出现时，
        请您主动靠近嗅闻头对气味进行嗅闻和识别</string>
    <string name="prepare_to_start">准备</string>
    <string name="prepare_to_start_next">下一个气味</string>
    <string name="sniff_ifo">闻</string>
    <string name="ansewer_ui_count">当前题目序号：</string>
    <string name="sniff_dialog_ifo">您是否闻到了气味？</string>
    <string name="sniff_confirm">是</string>
    <string name="sniff_nagetive">否</string>
    <string name="btn_sniff_retry">如不确定，点这里再闻一次</string>
    <string name="btn_retry_complete">您已使用完所有重闻的次数，不可再重闻</string>
    <string name="finish_quit_remind">测试完成，感谢您的使用！！！</string>
    <string name="finish_mock_quit_remind">模拟测试已完成！！！</string>
    <string name="quit_remind">是否退出当前页面？退出将不会保留任何数据</string>
    <string name="quit_mock_test_remind">是否退出当前模拟测试界面？</string>
    <string name="quit_record_notcomplit">未完成测试</string>
    <string name="please_wait">请稍候......</string>
    <string name="test_ifo">测试名称： </string>
    <string name="test_start_ifo">开始测试时间：</string>
    <string name="test_finish_ifo">完成测试时间：</string>
    <string name="test_status_ifo">答题情况：</string>
    <string name="preliminary_diagnosis">初步诊断：</string>
    <string name="id_3_7">ID号</string>
    <string name="educate_year">上了几年学？ ：</string>
    <string name="educate_level">受教育水平</string>
    <string name="educate_choose">选择</string>
    <string name="educate_1">小学</string>
    <string name="educate_2">初中</string>
    <string name="educate_3">高中（中专）</string>
    <string name="educate_4">本科（大专）</string>
    <string name="educate_5">硕士</string>
    <string name="educate_6">博士</string>
    <string name="tester_ifo">请输入您的个人信息:</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="directions_for_use_btn">使用说明</string>
    <string name="channel_sel_btn">选择测试类型</string>
    <string name="result_feedback_btn">测试结果及反馈</string>
    <string name="smell_test_12">12项气味测试</string>
    <string name="smell_test_20">20项气味测试</string>
    <string name="smell_test_40">40项气味测试</string>
    <string name="smell_test_custom">自定义气味测试</string>
    <string name="btn_check_result">查看测试结果</string>
    <string name="btn_usage_feedback">用户反馈</string>
    <string name="btn_remain_page">返回主页面</string>
    <string name="btn_connect">连接</string>
    <string name="btn_disconnect">断开连接</string>
    <string name="btn_channel_12">12通道</string>
    <string name="btn_channel_20">20通道</string>
    <string name="btn_channel_40">40通道</string>
    <string name="id_test_odor_cus">识别测试-嗅素选择</string>
    <string name="id_test_odor_cus_remind">当前选择的识别测试嗅素</string>
    <string name="retry_times_1">1次</string>
    <string name="retry_times_2">2次</string>
    <string name="retry_times_3">3次</string>
    <string name="retry_times_4">4次</string>
    <string name="retry_times_5">5次</string>
    <string name="retry_times_6">6次</string>
    <string name="retry_times_7">7次</string>
    <string name="retry_times_8">8次</string>
    <string name="no_retry_times">不设置重闻次数</string>
    <string name="mail_theme_interface">（邮件主题）App界面问题</string>
    <string name="mail_theme_process">（邮件主题）测试流程问题</string>
    <string name="mail_theme_export">（邮件主题）数据储存导出问题</string>
    <string name="mail_theme_other">（邮件主题）其他问题</string>
    <string name="random_pattern">题目顺序：随机模式</string>
    <string name="fix_pattern">题目顺序：固定模式</string>
    <string name="lang_select">语言选择</string>
    <string name="chinese">简体中文</string>
    <string name="english">英语</string>
    <string name="cancle_setting">已取消设置</string>
    <string name="confirm_setting">已设置为</string>
    <string name="result_normal_ifo">嗅觉功能正常</string>
    <string name="result_mid_ifo">嗅觉功能障碍</string>
    <string name="result_as_ifo">嗅觉功能丧失</string>
    <string name="app_name">嗅觉识别功能测试</string>
    <string name="educate_list">选择</string>
    <string name="logo_name">DOTS</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="maintop">DOTS</string>
    <string name="ShowcaseSequence_1">点击此处您可以进行识别模拟测试</string>
    <string name="ShowcaseSequence_2">点击此处您可以进行识别功能测试，包括12项识别功能测试及20项识别功能测试</string>
    <string name="ShowcaseSequence_5">点击此处您可以进入后台管理界面，可以在后台管理界面配制app的界面语言，
        设置嗅觉识别测试的各项测试参数，同时可以查看各项测试以及训练的结果</string>
    <string name="ShowcaseSequence_6">我已悉知，退出指引</string>

</resources>