<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:text="@string/usage_feedback"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="#363433"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="20sp"/>
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView android:id="@+id/feedback_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="#706F6D"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/feedback_rmd">
        </TextView>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <Spinner android:id="@+id/feedback_type_spinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:focusable="true"
                android:entries="@array/feedback_type"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText android:id="@+id/feedback_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:maxEms="10"
                android:minEms="10"
                android:hint="@string/feedback_rmd_2"
                android:gravity="top"
                android:layout_marginBottom="50dip"/>
            <Button android:id="@+id/feedback_submit"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/submit_feedback"
                android:textSize="20sp"
                android:background="@drawable/btn_transparent"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>